--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,16 +34,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
   firebase_core: ^4.2.0
-  flutter_spinkit: ^5.2.1
-  provider: ^6.1.5+1
+  firebase_auth: ^6.1.1
   firebase_messaging: ^16.0.3
   firebase_crashlytics: ^5.0.3
+  flutter_spinkit: ^5.2.1
+  provider: ^6.1.5+1
   cloudinary_public: ^0.23.1
   intl: ^0.20.2
   image_picker: ^1.2.0
+  google_maps_flutter: ^2.13.1
+  geolocator: ^14.0.2
+  flutter_local_notifications: ^19.5.0
+  share_plus: ^12.0.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
