--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   share_plus: ^12.0.1
   path_provider: ^2.1.5
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
