--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,21 +18,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
+# pubspec.yaml (trecho relevante)
 environment:
   sdk: ^3.9.2
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_localizations:        # <-- usa o oficial do SDK
+    sdk: flutter                # [web:150]
   cupertino_icons: ^1.0.8
   cloud_firestore: ^6.0.3
   firebase_core: ^4.2.0
@@ -42,7 +36,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   provider: ^6.1.5+1
   cloudinary_public: ^0.23.1
-  intl: ^0.20.2
+  intl: ^0.20.2                 # formatação com locale [web:156]
   image_picker: ^1.2.0
   google_maps_flutter: ^2.13.1
   geolocator: ^14.0.2
@@ -54,18 +48,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^6.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
 
   # The following line ensures that the Material Icons font is
