--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   share_plus: ^12.0.1
   path_provider: ^2.1.5
   flutter_secure_storage: ^9.2.4
+  url_launcher: ^6.3.2
+  map_launcher: ^4.4.2
+  flutter_svg: ^2.2.2
 
 dev_dependencies:
   flutter_test:
