--- a/functions/package.json
+++ b/functions/package.json
@@ -12,14 +12,15 @@
     "engines": {
         "node": "20"
     },
-    "main": "index.js",
+    "main": "lib/index.js",
     "dependencies": {
         "firebase-admin": "^12.0.0",
         "firebase-functions": "^5.0.0"
     },
     "devDependencies": {
         "eslint": "^8.0.0",
-        "firebase-functions-test": "^3.1.0"
+        "firebase-functions-test": "^3.1.0",
+        "typescript": "^5.9.3"
     },
     "private": true
 }
