--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   firebase_crashlytics: ^5.0.3
   flutter_spinkit: ^5.2.1
   provider: ^6.1.5+1
-  cloudinary_public: ^0.23.1
   intl: ^0.20.2                 # formatação com locale [web:156]
   image_picker: ^1.2.0
   google_maps_flutter: ^2.13.1
@@ -47,6 +46,7 @@ dependencies:
   url_launcher: ^6.3.2
   map_launcher: ^4.4.2
   flutter_svg: ^2.2.2
+  firebase_storage: ^13.0.4
 
 dev_dependencies:
   flutter_test:
