--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_storage: ^13.0.4
   flutter_image_compress: ^2.4.0
   cached_network_image: ^3.4.1
+  multi_image_picker_view: ^3.0.0
 
 dev_dependencies:
   flutter_test:
