--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   flutter_image_compress: ^2.4.0
   cached_network_image: ^3.4.1
   multi_image_picker_view: ^3.0.0
+  location: ^8.0.1
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
