--- a/functions/package.json
+++ b/functions/package.json
@@ -1,10 +1,10 @@
 {
     "name": "functions",
     "scripts": {
-        "build": "npm run lint",
-        "lint": "eslint .",
-        "serve": "firebase emulators:start --only functions",
-        "shell": "firebase functions:shell",
+        "build": "tsc",
+        "lint": "eslint src --ext .ts",
+        "serve": "npm run build && firebase emulators:start --only functions",
+        "shell": "npm run build && firebase functions:shell",
         "start": "npm run shell",
         "deploy": "firebase deploy --only functions",
         "logs": "firebase functions:log"
@@ -19,6 +19,8 @@
     },
     "devDependencies": {
         "eslint": "^8.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.0.0",
+        "@typescript-eslint/parser": "^5.0.0",
         "firebase-functions-test": "^3.1.0",
         "typescript": "^5.9.3"
     },
