--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   geocoding: ^4.0.0
   timer_builder: ^2.0.0
   photo_view: ^0.15.0
+  image_cropper: ^11.0.0
 
 dev_dependencies:
   flutter_test:
